# simple-commute-weather

./: .env.example  .gitignore  FRONTEND_REUSABLE_COMPONENTS.md  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
data/raw/: example_recent_weather.json
scripts/: run_baseline.py  run_commute_predictor.py
src/commute_weather/: __init__.py  config.py  main.py  scheduler.py
src/commute_weather/data_sources/: kma_api.py  weather_api.py
src/commute_weather/pipelines/: baseline.py  commute_predictor.py
tests/: test_app.py  test_baseline.py  test_kma_api.py
