[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commute-weather"
version = "0.1.0"
description = "Baseline commute comfort scoring project"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
